--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
   "version": "2.0.0",
   "description": "Nats.io",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-debug": "^3.2.0",
-    "gulp-gm": "0.0.8",
-    "gulp-if": "^2.0.0",
-    "gulp-image-resize": "^0.13.0",
-    "gulp-less": "^4.0.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.6.5",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0",
-    "run-sequence": "^2.2.1"
-  },
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp build"
+    "build": "gulp build && npm run minify",
+    "check": "nsp check",
+    "minify": "minify --html-keep-conditional-comments --html-keep-document-tags --html-keep-end-tags -r -o public/ -a public/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:nats-io/nats-site.git"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "gm": "^1.23.1",
-    "gulp-plumber": "^1.1.0",
-    "npm-check-updates": "^2.14.1"
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-concat": "^2.6.0",
+    "gulp-gm": "^0.0.8",
+    "gulp-image-resize": "^0.13.0",
+    "gulp-less": "^3.5.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-shell": "^0.6.5",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.0",
+    "nsp": "^3.2.1",
+    "run-sequence": "^2.2.1"
   }
 }
