--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Nats.io",
   "main": "gulpfile.js",
   "dependencies": {
+    "lodash": "^4.17.11",
     "prismjs": "^1.15.0"
   },
   "scripts": {
@@ -30,9 +31,9 @@
     "gulp-image-resize": "^0.13.0",
     "gulp-less": "^4.0.1",
     "gulp-notify": "^3.2.0",
-    "gulp-shell": "^0.7.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
+    "gulp-shell": "^0.7.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "nsp": "^3.2.1",
     "run-sequence": "^2.2.1"
   }
