--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "gulpfile.js",
   "dependencies": {
     "anchor-js": "^4.2.0",
+    "kind-of": "^6.0.3",
     "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
     "prismjs": "^1.15.0"
   },
   "scripts": {
@@ -28,7 +30,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.0",
-    "gulp-gm": "^0.0.8",
+    "gulp-gm": "0.0.9",
     "gulp-image-resize": "^0.13.1",
     "gulp-less": "^4.0.1",
     "gulp-notify": "^3.2.0",
